--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,26 +1,23 @@
 
- <div class="jumbotron">
-	<div  class="container">
-		<h1>what our customers tell...</h1>
-	</div>
+<div class="jumbotron jumbotron-fluid">
+      <h1 class="display-4">What our customers tell</h1>
+  </div>
 
-</div>
- 
- <div class="container flex-row flex-wrap ">
-   
+ <div class="container ">
+  
     <div class="card flex-row flex-wrap wrapper pb-2 mb-2">
         <div class="card-header border-0">
-            <img class="fotos" src="/assets/img/elefant.JPG" alt="">
+            <img class="fotos" src="/assets/img/kangaroo.jpg" alt="">
             <p class="card-text">Oliver P.</p><p class="card-text">34 years old</p>
 
         </div>
         <div class="card-block px-2 ref">
             <p class="card-text font-weight-light">date: 14.August 2019 </p>
-            <h5 class="card-title font-weight-bold">Booked Trip: Maledives</h5>
-            <p class="card-text">Thank you so much! It was the best holiday I ever had: Booking services were very easy to use. I booked hotel, flight and a car rental with very little effort and was provided with a variety of different options along the way. </p>
+            <h5 class="card-title font-weight-bold">Aguas Calientes</h5>
+            <p class="card-text"> Hey Guys, it was great! we just arrived and are really sad the time went by so fast. Peru was amazing! Looking forward to watching our taken fotos of the amazing area of Colca Canyon. El condor viene.. </p>
         </div>
-
     </div>
+
 
 
     <div class="card flex-row flex-wrap wrapper pb-2 mb-2">
@@ -31,10 +28,9 @@
         </div>
         <div class="card-block px-2 ref">
             <p class="card-text font-weight-light">date: 14.August 2019 </p>
-            <h5 class="card-title font-weight-bold">Booked Trip: Maledives</h5>
+            <h5 class="card-title font-weight-bold">Antarktis</h5>
             <p class="card-text">Thank you so much! It was the best holiday I ever had: Booking services were very easy to use. I booked hotel, flight and a car rental with very little effort and was provided with a variety of different options along the way. </p>
         </div>
-
     </div>
 
 
@@ -54,6 +50,6 @@
  
     </div>
 
-
+</div>
 
 
