--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-md navbar-light">
-    <a class="navbar-brand">My Store</a>
+    <a class="navbar-brand">Travel for Adventurers</a>
 
 <ul class="nav">
         <li class="nav-item active" >
