--- a/src/app/travel-list/travel-list.component.css
+++ b/src/app/travel-list/travel-list.component.css
@@ -11,6 +11,10 @@
    
 }
 
+.fotos:hover {
+    transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }
+
 .container{
     display: flex;
     flex-wrap: wrap-reverse;
