--- a/src/app/travel-list/travel-list.component.html
+++ b/src/app/travel-list/travel-list.component.html
@@ -2,7 +2,7 @@
 <div class="row container">
   <div
     *ngFor="let travel of travels; index as travelId"
-    class="card col-lg-4 col-xs-12 col-md-4 pt-3 pb-3 mt-4 mr-2"
+    class="card col-lg-4 col-xs-12 col-md-4 pt-3 pb-3 mt-4 mr-3 pr-2"
     style="width: 16rem;"
   >
     <h3>
@@ -10,6 +10,7 @@
         {{ travel.destination }}
       </a>
     </h3>
+    <br>
     <!-- <p *ngIf="travel.description">
       {{ travel.description }}
     </p> -->
