travelcart and restyling

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,6 +1,9 @@
 
 <div class="jumbotron jumbotron-fluid">
-      <h1 class="display-4">What our customers tell</h1>
+    <div class="container">
+      <h1 class="display-4">What our customers say</h1>
+      
+    </div>
   </div>
 
  <div class="container ">
