--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -6,7 +6,7 @@
 .table{
     max-width: 50%;
 }
-
+/* 
 .container{
     background: url("https://cdn.pixabay.com/photo/2020/05/20/15/05/shopping-cart-5196903_960_720.jpg") no-repeat;
     background-size: 100% ;
@@ -18,4 +18,11 @@
 
 b{
     color: #007BFF;
+} */
+
+@media screen and (max-width: 480px) {
+
+    .foto{
+        display: none;
+    }
 }
