--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -9,12 +9,8 @@
 
 <form class="box" [formGroup]="info" (ngSubmit)="onSubmit()">
 
-  <!-- <div class="row justify-content-center">
-   
-    <div class="col-4"> -->
-
-
-
+  <div class="row">
+  <div class="col-4"> 
   <label>
     First Name:
     <input type="text" formControlName="firstName" pattern="[a-zA-Z ]*" />
@@ -27,7 +23,9 @@
       Name must be a string.
     </div>
   </label>
+</div>
 
+<div class="col-4"> 
   <label>
     Last Name:
     <input type="text" formControlName="lastName" pattern="[a-zA-Z ]*" />
@@ -39,12 +37,14 @@
       LastName must be a string.
     </div>
   </label>
-
+  </div>
+</div>
 
 <!-- </div>
 <div class="col-4"> -->
 
-
+  <div class="row">
+  <div class="col-4"> 
   <label class= "mr-1">
     Destination:
   </label>
@@ -57,14 +57,13 @@
       Destination must be a string.
     </div>
 
+</div>
 
-
-  
-  <label>
-  
+<div class="col-4"> 
+  <label class="mr-3">
     Email: 
   </label>
-    <input type="text" formControlName="email" pattern="[a-zA-Z ]*" />
+    <input class = "ml-4" type="text" formControlName="email" pattern="[a-zA-Z ]*" />
     <div *ngIf="info.get('email').errors.required && submitted">
       Input is required.
     </div>
@@ -72,8 +71,8 @@
       Input must be at least 3 characters long.
     </div>
 
-
-
+</div>
+</div>
 
 
 <br><br><br><br><br><br>
