--- a/src/app/travel-list/travel-list.component.html
+++ b/src/app/travel-list/travel-list.component.html
@@ -1,4 +1,4 @@
-<h2>The world is just a few clicks away form you</h2>
+<h2>The world is just a few clicks away from you</h2>
 <div class="row container">
   <div
     *ngFor="let travel of travels; index as travelId"
