--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -1,9 +1,9 @@
-.ref{
+/* .ref{
     max-width: 70%;
-}
+} */
 
 .wrapper{
-    max-width: 35%;
+    /* max-width: 35%; */
     background-color: #C37E39;
 }
 
@@ -17,13 +17,22 @@
     justify-content: space-evenly;
 }
 
-.container{
+/* .container{
     background: url("https://cdn.pixabay.com/photo/2019/10/24/20/48/great-dane-4575323_1280.jpg")  no-repeat center center;
     background-size: 100% 100%;
     padding-top: 5%; 
     padding-bottom: 20%;
-}
+} */
 
 .jumbotron{
     background-color:rgb(169,98,36) ;
+    color: white;
+}
+
+@media screen and (max-width: 480px) {
+
+.container{
+    background: none;
+}
+
 }
