--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,10 +1,11 @@
 
 
 .container{
-    background: url("https://cdn.pixabay.com/photo/2019/10/24/20/48/great-dane-4575323_1280.jpg")  no-repeat center center;
+    background: url("https://cdn.pixabay.com/photo/2016/11/12/23/00/mailbox-1819966_960_720.jpg")  no-repeat center center;
     background-size: 100% 100%;
     padding-top: 10%; 
     padding-bottom: 20%;
+    /* opacity: 30%; */
 }
 
 *{
@@ -16,5 +17,6 @@
 }
 
 .box{
-    width: 70%;
+    width: 60%;
+    color: black;
 }
