--- a/src/app/hero/hero.component.css
+++ b/src/app/hero/hero.component.css
@@ -1,7 +1,14 @@
 .jumbotron{
-    background: url("https://cdn.pixabay.com/photo/2014/11/02/10/41/aircraft-513641_960_720.jpg")  no-repeat center center;
+    background: url("https://cdn.pixabay.com/photo/2017/08/07/10/20/bryce-2602307_960_720.jpg")  no-repeat center center;
     background-size: 100% 100%;
     padding-top: 25%;
     padding-bottom: 10%;
+    color: white;
 }
 
+@media screen and (max-width: 480px) {
+
+.jumbotron{
+    background: url("https://cdn.pixabay.com/photo/2017/08/07/10/20/bryce-2602307_960_720.jpg")  no-repeat center center;
+}
+} 
