--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-md navbar-light">
+<nav class="navbar navbar-expand-sm navbar-light">
     <a class="navbar-brand">Travel for Adventurers</a>
 
 <ul class="nav">
